<resources>
    <string name="app_name">HappyGOAL</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Introduce tu código</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Correo invalido</string>
    <string name="informacionEmocion">La información de tu emocion debe ser mayor a 15 caracteres</string>
    <string name="invalid_password">Código debe ser >5 caracteres</string>
    <string name="login_failed">"Acceso Invalido"</string>
    <string name="entrar">Entrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="enojado">Enojado</string>
    <string name="enojadoTitle">Gracias por compartirnos cómo te encuentras</string>
    <string name="enojadoSentence">Recuerda que hay espacios para escucharte</string>
    <string name="feliz">Feliz</string>
    <string name="felizTitle">Gracias por compartirnos cómo te encuentras</string>
    <string name="felizSentence">Nos fascina que te sientas feliz</string>
    <string name="motivado">Motivado</string>
    <string name="motivadoTitle">Gracias por compartirnos cómo te encuentras</string>
    <string name="motivadoSentence">Qué alegría que te encuentres motivado</string>
    <string name="estresado">Estresado</string>
    <string name="estresadoTitle">Gracias por compartirnos cómo te encuentras</string>
    <string name="estresadoSentence">Trabajaremos para mejorar el ambiente</string>
    <string name="tranquilo">Tranquilo</string>
    <string name="tranquiloTitle">Gracias por compartirnos cómo te encuentras</string>
    <string name="tranquiloSentence">Nos da gusto que te encuentres así</string>
    <string name="comoTeSientes">¿Cómo te sientes hoy?</string>
    <!--mensajes-->
    <string name="msjNoSentimiento">Selecciona una emoción</string>
    <string name="msjNoComentario">Coloca información sobre tu emoción</string>
    <string name="msjNoSeEncuentraRegistrado">El usuario no se encuentra registrado solicitalo con el administrador</string>
    <!--logueo-->
    <string name="token">Token</string>
    <string name="isloged">isLoged</string>
    <string name="dateloged">dateLoged</string>
    <string name="timeExpiration">3600000</string>
    <string name="username">userName</string>
    <string name="idempresa">idEmpresa</string>
    <string name="idusuario">idUsuario</string>
    <!--menu main-->
    <string name="estadisticaPersonal">Estadística personal</string>
    <string name="comentarioDelDia">Comentario del día</string>
    <string name="termometroGeneral">Termómetro general</string>
    <string name="acercaDe">Acerca de</string>

    <string name="cerrarSesion">Cerrar sesión</string>
    <!--menu estadistica personal-->
    <string name="misEstadisticasPersonales">Mis estadísticas personales</string>
    <string name="miGrafica">Mi gráfica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--errores-->
    <string name="errorEmocion">Ocurrio un error al guardar tu emoción</string>
    <string name="title_activity_estadistica_personal">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--estadistica personal-->
    <string name="no_existen_comentarios_estadistica_personal">Registra tus emociones para que puedas visualizar tu estadística personal</string>

    <!--termometro general-->
    <string name="termometro_general_grafica">Termómetro general gráfica</string>
    <string name="no_existen_datos_termometro">Para poder visualizar el Termómetro General es importante que registres tus comentarios del día, sé el primero en registrar y se muestre en el Termómetro General</string>

    <!--comentarios del dia-->
    <string name="comentarios_del_dia_grafica">Comentarios del día grafica</string>
    <string name="no_existen_comentarios_del_dia">Registra tus comentarios del día y sé el primero en mostrar anónimamente tu estado emocional</string>

    <!--acerca de-->
    <string name="acerca_de">“HAPPY GOAL ES UNA APLICACIÓN PARA MEDIR LA FELICIDAD EN EL TRABAJO, FUE CREADA POR EXO21. TODOS LOS DERECHOS RESERVADOS.” \n \n ESCRÍBENOS A: \n CONTACTO@EXO21.COM \n VERSIÓN 1.0 ENERO 2021</string>

    <!--dias-->
    <string name="domingo">Domingo</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="meses_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="emociones_array">
        <item>Feliz</item>
        <item>Motivado</item>
        <item>Tranquilo</item>
        <item>Estresado</item>
        <item>Enojado</item>
    </string-array>

</resources>