<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/estadisticaPersonalActivity"
            android:checked="true"
            android:icon="@drawable/ic_estadistica_personal"
            android:title="@string/estadisticaPersonal" />
        <item
            android:id="@+id/nav_comentarios_del_dia"
            android:icon="@drawable/ic_comentario_dia"
            android:title="@string/comentarioDelDia" />
        <item
            android:id="@+id/nav_termometro_general"
            android:icon="@drawable/ic_termometro"
            android:title="@string/termometroGeneral" />
        <item
            android:id="@+id/acerca_de"
            android:icon="@drawable/ic_acerca_de"
            android:title="@string/acercaDe" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_cerrar_sesion"
            android:title="@string/cerrarSesion" />
    </group>
</menu>